impr: added endpoints to upload images for users/products
